<resources>
    <string name="app_name">Tico</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="home">Home</string>
    <string name="typeamount">Type Amount</string>
    <string name="amazonlink">Amazon Link</string>
    <string name="flipkartlink">Flipkart Link</string>
    <string name="account">Account</string>
    <string name="myaccount">My Account</string>
    <string name="signout">Signout</string>
    <string name="aboutus">About Tico</string>
    <string name="help">Help</string>
</resources>
