<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
    <item android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>
    <item android:id="@+id/typeamt"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/typeamount"/>
    <item android:id="@+id/amazon"
        android:icon="@drawable/ic_local_grocery_store_black_24dp"
        android:title="@string/amazonlink"/>
    <item android:id="@+id/flipkart"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/flipkartlink"/>
    </group>

    <item android:title="@string/account">
        <menu>
            <item android:id="@+id/myaccount"
                android:icon="@drawable/ic_portrait_black_24dp"
                android:title="@string/myaccount"/>

            <item android:id="@+id/signout"
                android:icon="@drawable/ic_lock_black_24dp"
                android:title="@string/signout"/>
        </menu>
    </item>

    <item android:title="@string/app_name">
        <menu>
            <item android:id="@+id/aboutus"
                android:icon="@drawable/ic_phone_android_black_24dp"
                android:title="@string/aboutus"/>

            <item android:id="@+id/help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help"/>
        </menu>
    </item>

</menu>